# dotfiles

./: .gitignore  .gitmodules  .ideavimrc  README.md  alias.toml  cc-statusline.sh  clash-config.yaml  claude.json  ghostty  init.vim  maps.vim  plug.vim  private-build-plans.toml  skills.toml  starship.toml  tmux.conf
PowerShell/: install.ps1  profile.ps1
Windows/: profile.ps1  setup.ps1
after/plugin/: lspconfig.rc.vim
eslint-config/: package.json
eslint-config/src/: index.js
karabinder/: right_alt_caps_lock.json
macOS/: .zshrc  nix.sh  packages.nix  setup.sh  starship.sh
macOS/nix/: setup.sh
nix/: 7zip.nix  build.nix  packages.nix  setup.ps1
nix/Linux/: setup.sh
nix/macOS/: darwin-configuration.nix  setup.sh
nvim/: README.md  init.lua  init.vim  lazy-lock.json  maps.vim  nvim-0ca5413a  plug.vim  setup.sh
nvim-old/: README.md  init.vim  maps.vim
nvim/colors/: vellum.lua
nvim/lua/: base.lua  keymaps.lua  nvim-tree-telescope.lua  plugins.lua  shared.lua  vellum.lua
nvim/nvim-old/: init.lua  lazy-lock.json  setup.ps1
pwsh-profile/: profile.ps1
skills/commit-please/: SKILL.md
skillx/git-commit/: SKILL.md
skillx/mcp-skill-creator/: SKILL.md
unix/: .zshrc  ohmyzsh.sh  setup.ps1  setup.sh  starship.sh  tmux.conf  utils.zsh  zshrc
userscripts/: .gitignore  build.ts  package.json  tsconfig.json  tsconfig.node.json  vite-env.d.ts  vite.config.ts
userscripts/src/: arxiv.meta.ts  arxiv.ts  codeblock-font.meta.ts  codeblock-font.ts  (+4 more)
utils/: opengh.mjs
xbin/: CLAUDE.md  Cargo.toml
xbin/src/: envc.rs  open.rs  skills.rs  which.rs
(+53 files in other folders)
