[package]
name = "xbin"
version = "0.1.0"
edition = "2024"

[dependencies]
open = "5"
clap = "4"
which = "5"
sysinfo = "0.30.5"
ureq = "2"
toml = "0.9.11"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
flate2 = "1.1.5"
tar = "0.4.44"
walkdir = "2.5.0"
thiserror = "2.0.17"
regex = "1.12.2"

[[bin]]
name = "open"
path = "src/open.rs"

[[bin]]
name = "which"
path = "src/which.rs"

[[bin]]
name = "skill"
path = "src/skills.rs"
